# bioacoustic_spectrogram_pruning_experiments

./: README.md  pyproject.toml
PCEN/: PCEN.py  PCEN_reef_experiment.py  README.md
Top-Hat/: README.md  TopHat.py  TopHatExperiments.py
